--- a/index.html
+++ b/index.html
@@ -50,77 +50,77 @@
         </section>
         <section class="features-section section">
             <div class="container">
-                <ul class="features-list list">
-                    <li class="features-list-item">
-                        <div class="features-item-icon">
-                            <svg class="feature-icon">
+                <ul class="features list">
+                    <li class="feature">
+                        <div class="feature__image">
+                            <svg class="feature__icon">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
-                        <h3 class="features-list-title">увага до деталей</h3>
-                        <p class="features-list-descr">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                        <h3 class="feature__title">увага до деталей</h3>
+                        <p class="feature__descr">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
-                    <li class="features-list-item">
-                        <div class="features-item-icon">
-                            <svg class="feature-icon">
+                    <li class="feature">
+                        <div class="feature__image">
+                            <svg class="feature__icon">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>                           
                         </div>
-                        <h3 class="features-list-title">пунктуальність</h3>
-                        <p class="features-list-descr">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                        <h3 class="feature__title">пунктуальність</h3>
+                        <p class="feature__descr">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li class="features-list-item">
-                        <div class="features-item-icon">
-                            <svg class="feature-icon">
+                    <li class="feature">
+                        <div class="feature__image">
+                            <svg class="feature__icon">
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>                            
                         </div>
-                        <h3 class="features-list-title">планування</h3>
-                        <p class="features-list-descr">Так само консультація з широким активом значною мірою зумовлює.</p>
+                        <h3 class="feature__title">планування</h3>
+                        <p class="feature__descr">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li class="features-list-item">
-                        <div class="features-item-icon">
-                            <svg class="feature-icon">
+                    <li class="feature">
+                        <div class="feature__image">
+                            <svg class="feature__icon">
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>                                                        
                         </div>
-                        <h3 class="features-list-title">сучасні технології</h3>
-                        <p class="features-list-descr">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                        <h3 class="feature__title">сучасні технології</h3>
+                        <p class="feature__descr">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
                 </ul>
             </div>
         </section>
         <section class="activities-section section">
             <div class="container">
-                <h2 class="activities-section-title">Чим ми займаємося</h2>
-                <ul class="activities-list list">
-                    <li class="activities-list-item">
-                        <a class="activity-link link" href="">
-                            <div class="activity-wrap">
+                <h2 class="activities-section__title">Чим ми займаємося</h2>
+                <ul class="activities list">
+                    <li class="activity">
+                        <a class="activity__link link" href="">
+                            <div class="activity__wrap">
                                 <img src="./images/box1.jpg" alt="блок1" width="370">
                             </div>
-                            <div class="overlay-box">
-                                <p class="overlay-text">Десктопні додатки</p>
+                            <div class="activity__overlay">
+                                <p class="activity__title">Десктопні додатки</p>
                             </div>
                         </a>
                     </li>
-                    <li class="activities-list-item">
-                        <a class="activity-link link" href="">
-                            <div class="activity-wrap">
+                    <li class="activity">
+                        <a class="activity__link link" href="">
+                            <div class="activity__wrap">
                                 <img src="./images/box2.jpg" alt="блок2" width="370">
-                                <div class="overlay-box">
-                                    <p class="overlay-text">Мобільні додатки</p>
+                                <div class="activity__overlay">
+                                    <p class="activity__title">Мобільні додатки</p>
                                 </div>
                             </div>
                         </a>
                     </li>
-                    <li class="activities-list-item">
-                        <a class="activity-link link" href="">
-                            <div class="activity-wrap">
+                    <li class="activity">
+                        <a class="activity__link link" href="">
+                            <div class="activity__wrap">
                                 <img src="./images/box3.jpg" alt="блок3" width="370">
                             </div>
-                            <div class="overlay-box">
-                                <p class="overlay-text">Дизайнерські рішення</p>
+                            <div class="activity__overlay">
+                                <p class="activity__title">Дизайнерські рішення</p>
                             </div>
                         </a>
                     </li>    
@@ -284,46 +284,46 @@
         </section>
         <section class="clients-section section">
             <div class="container">
-                <h2 class="clients-section-title">Постійні клієнти</h2>
-                <ul class="clients-list list">
-                    <li class="client-item">
-                        <a class="client-item-link link" href="">
-                            <svg class="client-link-icon icon">
+                <h2 class="clients-section__title">Постійні клієнти</h2>
+                <ul class="clients list">
+                    <li class="clients-item">
+                        <a class="clients__link link" href="">
+                            <svg class="clients__icon icon">
                                 <use href="./images/icons.svg#icon-client5"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a class="client-item-link link" href="">
-                            <svg class="client-link-icon icon">
+                    <li class="clients-item">
+                        <a class="clients__link link" href="">
+                            <svg class="clients__icon icon">
                                 <use href="./images/icons.svg#icon-client6"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a class="client-item-link link" href="">
-                            <svg class="client-link-icon icon">
+                    <li class="clients-item">
+                        <a class="clients__link link" href="">
+                            <svg class="clients__icon icon">
                                 <use href="./images/icons.svg#icon-client1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a class="client-item-link link" href="">
-                            <svg class="client-link-icon icon">
+                    <li class="clients-item">
+                        <a class="clients__link link" href="">
+                            <svg class="clients__icon icon">
                                 <use href="./images/icons.svg#icon-client2"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a class="client-item-link link" href="">
-                            <svg class="client-link-icon icon">
+                    <li class="clients-item">
+                        <a class="clients__link link" href="">
+                            <svg class="clients__icon icon">
                                 <use href="./images/icons.svg#icon-client3"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a class="client-item-link link" href="">
-                            <svg class="client-link-icon icon">
+                    <li class="clients-item">
+                        <a class="clients__link link" href="">
+                            <svg class="clients__icon icon">
                                 <use href="./images/icons.svg#icon-client4"></use>
                             </svg>
                         </a>
