--- a/index.html
+++ b/index.html
@@ -286,42 +286,42 @@
             <div class="container">
                 <h2 class="clients-section__title">Постійні клієнти</h2>
                 <ul class="clients list">
-                    <li class="clients-item">
+                    <li class="clients__item">
                         <a class="clients__link link" href="">
                             <svg class="clients__icon icon">
                                 <use href="./images/icons.svg#icon-client5"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-item">
+                    <li class="clients__item">
                         <a class="clients__link link" href="">
                             <svg class="clients__icon icon">
                                 <use href="./images/icons.svg#icon-client6"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-item">
+                    <li class="clients__item">
                         <a class="clients__link link" href="">
                             <svg class="clients__icon icon">
                                 <use href="./images/icons.svg#icon-client1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-item">
+                    <li class="clients__item">
                         <a class="clients__link link" href="">
                             <svg class="clients__icon icon">
                                 <use href="./images/icons.svg#icon-client2"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-item">
+                    <li class="clients__item">
                         <a class="clients__link link" href="">
                             <svg class="clients__icon icon">
                                 <use href="./images/icons.svg#icon-client3"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-item">
+                    <li class="clients__item">
                         <a class="clients__link link" href="">
                             <svg class="clients__icon icon">
                                 <use href="./images/icons.svg#icon-client4"></use>
